USE_CABAL=	OneTuple-0.4.3 \
		QuickCheck-2.18.0.0 \
		StateVar-1.2.2 \
		aeson-2.3.0.0_1 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		assoc-1.1.1_2 \
		attoparsec-0.14.4_6 \
		attoparsec-aeson-2.2.2.0_1 \
		base-compat-0.15.0 \
		base-orphans-0.9.4 \
		bifunctors-5.6.3_1 \
		character-ps-0.1 \
		cmdargs-0.10.22 \
		colour-2.3.7 \
		comonad-5.0.10 \
		contravariant-1.5.6 \
		data-fix-0.3.4_2 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		hashable-1.5.1.0 \
		indexed-traversable-0.1.5 \
		indexed-traversable-instances-0.1.2.1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		network-uri-2.6.4.2_1 \
		optparse-applicative-0.19.0.0_1 \
		prettyprinter-1.7.2 \
		prettyprinter-ansi-terminal-1.1.4 \
		primitive-0.9.1.0_1 \
		random-1.3.1 \
		scientific-0.3.8.1 \
		semialign-1.4 \
		semigroupoids-6.0.2_1 \
		splitmix-0.1.3.2 \
		strict-0.5.1_1 \
		tagged-0.8.10_1 \
		tasty-1.5.4 \
		text-iso8601-0.2.0.0 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		these-1.2.1_3 \
		time-compat-1.9.9_1 \
		transformers-compat-0.8 \
		unordered-containers-0.2.21_2 \
		uuid-types-1.0.6.1 \
		vector-0.13.2.0_5 \
		vector-stream-0.1.0.1_4 \
		witherable-0.5_2
