USE_CABAL=	HUnit-1.6.2.0 \
		OneTuple-0.4.2.1 \
		QuickCheck-2.16.0.0 \
		StateVar-1.2.2 \
		aeson-2.2.3.0_4 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		ansi-wl-pprint-1.0.2 \
		assoc-1.1.1_2 \
		attoparsec-0.14.4_6 \
		base-orphans-0.9.4 \
		bifunctors-5.6.3_1 \
		bimap-0.5.0 \
		bitvec-1.1.6.0 \
		call-stack-0.4.0 \
		character-ps-0.1 \
		clock-0.8.4 \
		colour-2.3.7 \
		comonad-5.0.10 \
		concurrent-split-0.0.1.1 \
		conduit-1.3.6.1 \
		contravariant-1.5.6 \
		data-fix-0.3.4_2 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		extra-1.8.1 \
		filepattern-0.1.3 \
		generically-0.1.1_5 \
		hashable-1.5.1.0 \
		haskell-lexer-1.2.1 \
		heaps-0.4.1 \
		hspec-2.11.17 \
		hspec-core-2.11.17 \
		hspec-discover-2.11.17 \
		hspec-expectations-0.8.4_2 \
		hspec-golden-0.2.2.0_1 \
		indexed-traversable-0.1.4_1 \
		indexed-traversable-instances-0.1.2_1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		js-dgtable-0.5.2 \
		js-flot-0.8.3 \
		js-jquery-3.7.1 \
		libyaml-0.1.4 \
		libyaml-clib-0.2.5 \
		mono-traversable-1.0.21.0 \
		network-uri-2.6.4.2_1 \
		optparse-applicative-0.18.1.0_1 \
		os-string-2.0.10 \
		pooled-io-0.0.2.3_2 \
		prettyprinter-1.7.1 \
		prettyprinter-ansi-terminal-1.1.3 \
		prettyprinter-compat-ansi-wl-pprint-1.0.2 \
		primitive-0.9.1.0_1 \
		quickcheck-io-0.2.0 \
		random-1.3.1 \
		relude-1.2.2.2_2 \
		resourcet-1.3.0 \
		scientific-0.3.8.1 \
		semialign-1.3.1_2 \
		semigroupoids-6.0.2_1 \
		shake-0.19.9 \
		split-0.2.5 \
		splitmix-0.1.3.2 \
		strict-0.5.1_1 \
		tagged-0.8.10_1 \
		tasty-1.5.4 \
		tasty-hunit-0.10.2 \
		text-iso8601-0.1.1_2 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		these-1.2.1_2 \
		time-compat-1.9.9 \
		transformers-compat-0.7.2 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		unsafe-0.0 \
		utf8-string-1.0.2 \
		utility-ht-0.0.17.2 \
		uuid-types-1.0.6_3 \
		vector-0.13.2.0_2 \
		vector-algorithms-0.9.1.0_1 \
		vector-stream-0.1.0.1_4 \
		witherable-0.5_2 \
		yaml-0.11.11.2_2
