USE_CABAL=	Cabal-3.16.1.0 \
		Cabal-syntax-3.16.1.0_1 \
		HTTP-4000.5.0_1 \
		ListLike-4.7.8.4 \
		OneTuple-0.4.2.1 \
		QuickCheck-2.16.0.0 \
		StateVar-1.2.2 \
		aeson-2.2.3.0_4 \
		alex-3.5.4.2 \
		alfred-margaret-2.1.0.2 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		appar-0.1.8 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		atomic-counter-0.1.2.4 \
		attoparsec-0.14.4_6 \
		attoparsec-aeson-2.2.2.0 \
		auto-update-0.2.6 \
		base-orphans-0.9.4 \
		base16-1.0_4 \
		base16-bytestring-1.0.2.0_1 \
		base64-1.0_2 \
		base64-bytestring-1.2.1.0_1 \
		bifunctors-5.6.3_1 \
		bitvec-1.1.6.0 \
		blaze-builder-0.4.4.1 \
		blaze-html-0.9.2.0_1 \
		blaze-markup-0.8.3.0_2 \
		bsb-http-chunked-0.0.0.4_4 \
		byteorder-1.0.4 \
		cabal-install-3.16.1.0_1 \
		cabal-install-solver-3.16.1.0_1 \
		case-insensitive-1.2.1.0 \
		cborg-0.2.10.0_3 \
		cereal-0.5.8.3 \
		character-ps-0.1 \
		clock-0.8.4 \
		cmdargs-0.10.22 \
		colour-2.3.7 \
		comonad-5.0.10 \
		conduit-1.3.6.1 \
		conduit-extra-1.3.8_1 \
		contravariant-1.5.6 \
		cookie-0.5.1 \
		crypto-token-0.2.0 \
		cryptohash-md5-0.11.101.0_6 \
		cryptohash-sha256-0.11.102.1_6 \
		crypton-1.1.1 \
		crypton-asn1-encoding-0.10.0 \
		crypton-asn1-parse-0.10.0 \
		crypton-asn1-types-0.4.1 \
		crypton-connection-0.4.6 \
		crypton-pem-0.3.0 \
		crypton-socks-0.6.2 \
		crypton-x509-1.9.0 \
		crypton-x509-store-1.9.0 \
		crypton-x509-system-1.9.0 \
		crypton-x509-validation-1.9.0 \
		data-default-0.8.0.2 \
		data-default-class-0.2.0.0 \
		data-fix-0.3.4_2 \
		directory-ospath-streaming-0.3_1 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		easy-file-0.2.5 \
		ech-config-0.0.1_1 \
		echo-0.1.4 \
		ed25519-0.0.5.0_9 \
		edit-distance-0.2.2.1_1 \
		extra-1.8.1 \
		fast-logger-3.2.6 \
		file-io-0.1.6 \
		fmlist-0.9.4 \
		generic-deriving-1.14.7 \
		generically-0.1.1_5 \
		ghc-lib-parser-9.14.1.20251220 \
		hackage-revdeps-0.3 \
		hackage-security-0.6.3.2_1 \
		half-0.3.3_2 \
		happy-2.1.7 \
		happy-lib-2.1.7 \
		hashable-1.5.1.0 \
		haskell-src-exts-1.23.1 \
		hpke-0.1.0 \
		hsc2hs-0.68.10_5 \
		http-client-0.7.19 \
		http-client-tls-0.4.0 \
		http-conduit-2.3.9.1_1 \
		http-date-0.0.11 \
		http-semantics-0.4.0 \
		http-types-0.12.4 \
		http2-5.4.0 \
		indexed-traversable-0.1.4_1 \
		indexed-traversable-instances-0.1.2_1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		iproute-1.7.15 \
		js-flot-0.8.3 \
		js-jquery-3.7.1 \
		mime-types-0.1.2.2 \
		mmap-0.5.9 \
		mono-traversable-1.0.21.0 \
		network-3.2.8.0 \
		network-byte-order-0.1.8 \
		network-control-0.1.7 \
		network-uri-2.6.4.2_1 \
		old-locale-1.0.0.7_2 \
		old-time-1.1.1.0 \
		open-browser-0.4.0.0 \
		optparse-applicative-0.19.0.0 \
		prettyprinter-1.7.1 \
		prettyprinter-ansi-terminal-1.1.3 \
		primitive-0.9.1.0_1 \
		process-extras-0.7.4_1 \
		psqueues-0.2.8.3 \
		ram-0.21.1 \
		random-1.3.1 \
		recv-0.1.1 \
		regex-base-0.94.0.3 \
		regex-posix-0.96.0.2 \
		resolv-0.2.0.3 \
		resourcet-1.3.0 \
		safe-0.3.21_1 \
		safe-exceptions-0.1.7.4_1 \
		scientific-0.3.8.1 \
		semialign-1.3.1_2 \
		semigroupoids-6.0.2_1 \
		semigroups-0.20.1 \
		serialise-0.2.6.1_5 \
		simple-sendfile-0.2.32 \
		split-0.2.5 \
		splitmix-0.1.3.2 \
		storable-record-0.0.7 \
		storable-tuple-0.1 \
		streaming-commons-0.2.3.1 \
		strict-0.5.1_1 \
		syb-0.7.4 \
		tagged-0.8.10_1 \
		tar-0.7.0.0_2 \
		tasty-1.5.4 \
		temporary-1.3 \
		text-iso8601-0.1.1_2 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		these-1.2.1_2 \
		time-compat-1.9.9 \
		time-hourglass-0.3.0 \
		time-manager-0.3.1.1 \
		tls-2.3.0 \
		tls-session-manager-0.1.0 \
		transformers-compat-0.8 \
		typed-process-0.2.13.0 \
		uniplate-1.6.13_1 \
		unix-compat-0.7.4.1 \
		unix-time-0.4.17 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		utf8-string-1.0.2 \
		utility-ht-0.0.17.2 \
		uuid-types-1.0.6_3 \
		vault-0.3.1.6 \
		vector-0.13.2.0_2 \
		vector-algorithms-0.9.1.0_1 \
		vector-stream-0.1.0.1_4 \
		wai-3.2.4 \
		wai-logger-2.5.0 \
		warp-3.4.12_1 \
		warp-tls-3.4.13_2 \
		witherable-0.5_2 \
		word8-0.1.3 \
		zlib-0.7.1.1
