USE_CABAL=	Cabal-syntax-3.16.1.0_2 \
		Diff-1.0.2 \
		MemoTrie-0.6.11 \
		alex-3.5.4.2 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		async-2.2.6 \
		case-insensitive-1.2.1.0 \
		choice-0.2.4.2 \
		colour-2.3.7 \
		file-embed-0.0.16.0 \
		ghc-lib-parser-9.14.1.20251220 \
		happy-2.1.7 \
		happy-lib-2.1.7 \
		hashable-1.5.1.0 \
		integer-logarithms-1.0.5 \
		megaparsec-9.7.1 \
		newtype-generics-0.6.3 \
		optparse-applicative-0.19.0.0_1 \
		parser-combinators-1.3.1 \
		prettyprinter-1.7.2 \
		prettyprinter-ansi-terminal-1.1.4 \
		primitive-0.9.1.0_1 \
		safe-exceptions-0.1.7.4_1 \
		scientific-0.3.8.1 \
		syb-0.7.4 \
		th-compat-0.1.7 \
		th-env-0.1.1 \
		unliftio-0.2.25.1 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2
