USE_CABAL=	Decimal-0.5.2 \
		Diff-1.0.2 \
		Glob-0.10.2_3 \
		OneTuple-0.4.2.1 \
		Only-0.1_2 \
		QuickCheck-2.16.0.0 \
		RSA-2.4.1_2 \
		SHA-1.6.4.4 \
		StateVar-1.2.2 \
		aeson-2.2.3.0_4 \
		aeson-pretty-0.8.10 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		appar-0.1.8 \
		asn1-encoding-0.9.6_2 \
		asn1-types-0.3.4 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		attoparsec-0.14.4_6 \
		attoparsec-aeson-2.2.2.0 \
		authenticate-oauth-1.7_1 \
		auto-update-0.2.6 \
		base-compat-0.15.0 \
		base-orphans-0.9.4 \
		base16-1.0_4 \
		base16-bytestring-1.0.2.0_1 \
		base64-1.0_2 \
		base64-bytestring-1.2.1.0_1 \
		basement-0.0.16 \
		bifunctors-5.6.3_1 \
		bimap-0.5.0 \
		bitvec-1.1.6.0 \
		blaze-builder-0.4.4.1 \
		blaze-html-0.9.2.0_1 \
		blaze-markup-0.8.3.0_2 \
		brick-2.10_1 \
		byteorder-1.0.4 \
		call-stack-0.4.0 \
		case-insensitive-1.2.1.0 \
		cassava-0.5.4.1 \
		cassava-megaparsec-2.1.1 \
		cborg-0.2.10.0_3 \
		cereal-0.5.8.3 \
		character-ps-0.1 \
		clock-0.8.4 \
		cmdargs-0.10.22 \
		colour-2.3.7 \
		comonad-5.0.10 \
		conduit-1.3.6.1 \
		conduit-extra-1.3.8_1 \
		config-ini-0.2.7.0_1 \
		contravariant-1.5.6 \
		control-monad-free-0.6.2 \
		cookie-0.5.1 \
		crypto-api-0.13.3_1 \
		crypto-pubkey-types-0.4.3 \
		cryptohash-md5-0.11.101.0_6 \
		crypton-1.1.1 \
		crypton-asn1-encoding-0.10.0 \
		crypton-asn1-parse-0.10.0 \
		crypton-asn1-types-0.4.1 \
		crypton-connection-0.4.6 \
		crypton-pem-0.3.0 \
		crypton-socks-0.6.2 \
		crypton-x509-1.9.0 \
		crypton-x509-store-1.9.0 \
		crypton-x509-system-1.9.0 \
		crypton-x509-validation-1.9.0 \
		csv-0.1.2 \
		data-clist-0.2_1 \
		data-default-0.8.0.2 \
		data-default-class-0.2.0.0 \
		data-fix-0.3.4_2 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		doclayout-0.5.0.1 \
		easy-file-0.2.5 \
		ech-config-0.0.1_1 \
		emojis-0.1.4.1 \
		encoding-0.10.2 \
		entropy-0.4.1.11_1 \
		extensible-exceptions-0.1.1.4 \
		extra-1.8.1 \
		fast-logger-3.2.6 \
		file-embed-0.0.16.0 \
		fsnotify-0.4.4.0 \
		generically-0.1.1_5 \
		githash-0.1.7.0 \
		half-0.3.3_2 \
		happy-2.2 \
		happy-lib-2.2 \
		hashable-1.5.1.0 \
		hashtables-1.4.2 \
		haskell-src-exts-1.23.1 \
		haskell-src-meta-0.8.15_1 \
		hinotify-0.4.2 \
		hledger-1.52 \
		hledger-lib-1.52 \
		hourglass-0.2.12_1 \
		hpke-0.1.0 \
		hsc2hs-0.68.10_5 \
		html-1.0.1.2 \
		http-api-data-0.7_1 \
		http-client-0.7.19 \
		http-client-tls-0.4.0 \
		http-types-0.12.4 \
		indexed-traversable-0.1.4_1 \
		indexed-traversable-instances-0.1.2_1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		iproute-1.7.15 \
		lifted-base-0.2.3.12 \
		lucid-2.11.20250303 \
		math-functions-0.3.4.4 \
		megaparsec-9.7.0_1 \
		memory-0.18.0_1 \
		microlens-0.5.0.0 \
		microlens-ghc-0.4.15.2 \
		microlens-mtl-0.2.1.1 \
		microlens-platform-0.4.4.2 \
		microlens-th-0.4.3.18_1 \
		mime-types-0.1.2.2 \
		mmorph-1.2.2_1 \
		modern-uri-0.3.6.1_4 \
		monad-control-1.0.3.1 \
		monad-logger-0.3.42 \
		monad-loops-0.4.3 \
		mono-traversable-1.0.21.0 \
		mtl-compat-0.2.2 \
		network-3.2.8.0 \
		network-byte-order-0.1.8 \
		network-uri-2.6.4.2_1 \
		old-locale-1.0.0.7_2 \
		old-time-1.1.1.0 \
		optparse-applicative-0.19.0.0 \
		parser-combinators-1.3.1 \
		pretty-simple-4.1.4.0 \
		prettyprinter-1.7.1 \
		prettyprinter-ansi-terminal-1.1.3 \
		primitive-0.9.1.0_1 \
		profunctors-5.6.3 \
		quote-quot-0.2.1.0 \
		ram-0.21.1 \
		random-1.3.1 \
		reflection-2.1.9_1 \
		regex-base-0.94.0.3 \
		regex-compat-0.95.2.2 \
		regex-posix-0.96.0.2 \
		regex-tdfa-1.3.2.5 \
		req-3.13.4_8 \
		resourcet-1.3.0 \
		retry-0.9.3.1 \
		safe-0.3.21_1 \
		safe-exceptions-0.1.7.4_1 \
		scientific-0.3.8.1 \
		semialign-1.3.1_2 \
		semigroupoids-6.0.2_1 \
		serialise-0.2.6.1_5 \
		shakespeare-2.2.0 \
		split-0.2.5 \
		splitmix-0.1.3.2 \
		stm-chans-3.0.0.11 \
		streaming-commons-0.2.3.1 \
		strict-0.5.1_1 \
		string-interpolate-0.3.4.0_4 \
		syb-0.7.4 \
		tabular-0.2.2.8_1 \
		tagged-0.8.10_1 \
		tasty-1.5.3_2 \
		tasty-hunit-0.10.2 \
		temporary-1.3 \
		terminal-size-0.3.4_1 \
		text-ansi-0.3.0.1_2 \
		text-builder-linear-0.1.3 \
		text-conversions-0.3.1.1 \
		text-iso8601-0.1.1_2 \
		text-short-0.1.6.1 \
		text-zipper-0.13 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		th-expand-syns-0.4.12.0_1 \
		th-lift-0.8.7 \
		th-orphans-0.13.17 \
		th-reify-many-0.1.10 \
		these-1.2.1_2 \
		time-compat-1.9.9 \
		time-hourglass-0.3.0 \
		timeit-2.0_2 \
		tls-2.3.0 \
		transformers-base-0.4.6.1 \
		transformers-compat-0.7.2 \
		typed-process-0.2.13.0 \
		uglymemo-0.1.0.1 \
		unix-compat-0.7.4.1 \
		unix-time-0.4.17 \
		unliftio-0.2.25.1 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		utf8-string-1.0.2 \
		utility-ht-0.0.17.2 \
		uuid-types-1.0.6_3 \
		vector-0.13.2.0_2 \
		vector-algorithms-0.9.1.0_1 \
		vector-stream-0.1.0.1_4 \
		vty-6.5 \
		vty-crossplatform-0.4.0.0 \
		vty-unix-0.2.0.0 \
		witherable-0.5_2 \
		wizards-1.0.3_3 \
		word-wrap-0.5 \
		zlib-0.7.1.1
