USE_CABAL=	IfElse-0.85 \
		alex-3.5.4.2 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		base-compat-0.15.0 \
		c2hs-0.28.8_3 \
		case-insensitive-1.2.1.0 \
		colour-2.3.7 \
		data-default-0.8.0.2 \
		dlist-1.0_2 \
		happy-2.2 \
		happy-lib-2.2 \
		hashable-1.5.1.0 \
		language-c-0.10.2 \
		monad-loops-0.4.3 \
		ncurses-0.2.16_1 \
		optparse-applicative-0.19.0.0 \
		prettyprinter-1.7.1 \
		prettyprinter-ansi-terminal-1.1.3 \
		primitive-0.9.1.0_1 \
		random-1.3.1 \
		splitmix-0.1.3.2 \
		tagged-0.8.10_1 \
		tasty-1.5.4 \
		vector-0.13.2.0_2 \
		vector-stream-0.1.0.1_4
