USE_CABAL=	Cabal-3.16.1.0_1 \
		Cabal-syntax-3.16.1.0_2 \
		FailT-0.1.2.0 \
		Glob-0.10.2_3 \
		HUnit-1.6.2.0 \
		ImpSpec-0.2.0.0 \
		MemoTrie-0.6.11 \
		MonadRandom-0.6.2.1 \
		OneTuple-0.4.3 \
		Only-0.1_2 \
		QuickCheck-2.15.0.1_1 \
		SHA-1.6.4.4 \
		StateVar-1.2.2 \
		Stream-0.4.7.2 \
		Unique-0.4.8.0_1 \
		Win32-network-0.2.0.1:chap \
		adjunctions-4.4.4 \
		aeson-2.2.4.1 \
		aeson-pretty-0.8.10 \
		alex-3.5.4.2 \
		algebraic-graphs-0.8 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		ansi-wl-pprint-1.0.2 \
		appar-0.1.8 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		async-timer-0.1.4.1 \
		atomic-primops-0.8.8 \
		attoparsec-0.14.4_6 \
		attoparsec-aeson-2.2.2.0_1 \
		auto-update-0.2.6 \
		barbies-2.1.1.0 \
		base-compat-0.14.1 \
		base-compat-batteries-0.14.1 \
		base-deriving-via-0.1.0.2:chap \
		base-orphans-0.9.4 \
		base16-1.0_4 \
		base16-bytestring-1.0.2.0_1 \
		base58-bytestring-0.1.0 \
		base64-1.0_3 \
		base64-bytestring-1.2.1.0_1 \
		base64-bytestring-type-1.0.1_26 \
		basement-0.0.16:chap \
		bech32-1.1.11 \
		bech32-th-1.1.11 \
		bifunctors-5.6.3_1 \
		bimap-0.5.0 \
		bin-0.1.4_2 \
		binary-orphans-1.0.6 \
		bitvec-1.1.6.0 \
		blaze-builder-0.4.4.1 \
		blaze-html-0.9.2.0_1 \
		blaze-markup-0.8.3.0_2 \
		blockio-0.1.1.2 \
		bloomfilter-blocked-0.1.0.2 \
		boring-0.2.2_1 \
		boxes-0.1.5 \
		bsb-http-chunked-0.0.0.4_4 \
		byron-spec-chain-1.0.1.1:chap \
		byron-spec-ledger-1.1.0.1:chap \
		byteorder-1.0.4 \
		call-stack-0.4.0 \
		canonical-json-0.6.0.1_1 \
		capability-0.5.0.1_6 \
		cardano-base-0.1.3.0:chap \
		cardano-binary-1.9.0.0:chap \
		cardano-crypto-1.3.0:chap \
		cardano-crypto-class-2.3.2.0:chap \
		cardano-crypto-praos-2.2.2.0:chap \
		cardano-crypto-wrapper-1.7.0.0:chap \
		cardano-data-1.3.0.0:chap \
		cardano-diffusion-1.0.0.0_4:chap \
		cardano-git-rev-0.2.2.1:chap \
		cardano-ledger-allegra-1.9.0.0:chap \
		cardano-ledger-alonzo-1.15.0.1:chap \
		cardano-ledger-alonzo-test-1.4.0.1:chap \
		cardano-ledger-api-1.13.0.0:chap \
		cardano-ledger-babbage-1.13.0.0:chap \
		cardano-ledger-binary-1.8.1.0:chap \
		cardano-ledger-byron-1.3.0.0:chap \
		cardano-ledger-conway-1.22.1.0:chap \
		cardano-ledger-core-1.20.0.0:chap \
		cardano-ledger-dijkstra-0.2.0.1:chap \
		cardano-ledger-mary-1.10.0.0:chap \
		cardano-ledger-shelley-1.18.1.0:chap \
		cardano-ledger-shelley-ma-test-1.4.0.2:chap \
		cardano-ledger-shelley-test-1.8.0.0:chap \
		cardano-lmdb-0.4.0.3:chap \
		cardano-lmdb-simple-0.8.1.1:chap \
		cardano-prelude-0.2.2.0:chap \
		cardano-prelude-test-0.1.0.5:chap \
		cardano-protocol-tpraos-1.5.0.0:chap \
		cardano-slotting-0.2.1.0:chap \
		cardano-strict-containers-0.1.6.0:chap \
		case-insensitive-1.2.1.0 \
		casing-0.1.4.1_1 \
		cassava-0.5.4.1 \
		cborg-0.2.10.0_3 \
		cborg-json-0.2.6.0_4 \
		cereal-0.5.8.3 \
		character-ps-0.1 \
		charset-0.3.12 \
		clock-0.8.4 \
		cmdargs-0.10.22 \
		code-page-0.2.1 \
		colour-2.3.7 \
		commutative-semigroups-0.2.0.2 \
		comonad-5.0.10 \
		compact-0.2.0.0_4 \
		composition-prelude-3.0.1.0 \
		concurrent-output-1.10.21 \
		conduit-1.3.6.1 \
		conduit-extra-1.3.8_1 \
		constraints-0.14.4 \
		constraints-extras-0.4.0.2_1 \
		contra-tracer-0.1.0.2:chap \
		contravariant-1.5.6 \
		cookie-0.5.1 \
		crc32c-0.2.2 \
		criterion-1.6.5.0_1 \
		criterion-measurement-0.2.4.0_1 \
		cryptohash-md5-0.11.101.0_6 \
		crypton-1.0.6 \
		crypton-asn1-encoding-0.10.0 \
		crypton-asn1-parse-0.10.0 \
		crypton-asn1-types-0.4.1 \
		crypton-connection-0.4.5_1 \
		crypton-pem-0.3.0 \
		crypton-socks-0.6.2 \
		crypton-x509-1.8.0_1 \
		crypton-x509-store-1.8.0 \
		crypton-x509-system-1.8.0 \
		crypton-x509-validation-1.8.0_1 \
		cuddle-1.1.1.0:chap \
		data-default-0.8.0.2 \
		data-default-class-0.2.0.0 \
		data-elevator-0.2_1 \
		data-fix-0.3.4_2 \
		dec-0.0.6_2 \
		dense-linear-algebra-0.1.0.0 \
		dependent-map-0.4.0.1 \
		dependent-sum-0.7.2.0_2 \
		deque-0.4.4.4 \
		deriving-aeson-0.2.10 \
		deriving-compat-0.6.8 \
		dictionary-sharing-0.1.0.0_4 \
		diff-containers-1.3.0.0:chap \
		digest-0.0.2.1.0.0.0.1_1:chap \
		distributive-0.6.3 \
		dlist-1.0_2 \
		dns-4.2.0 \
		dom-lt-0.2.4 \
		dot-0.3 \
		easy-file-0.2.5 \
		ech-config-0.0.1_1 \
		either-5.0.3_2 \
		ekg-core-0.1.2.0:chap \
		ekg-json-0.1.1.1:chap \
		ekg-wai-0.1.2.0:chap \
		entropy-0.4.1.11_1 \
		erf-2.0.0.0 \
		extensible-exceptions-0.1.1.4 \
		extra-1.8 \
		fast-logger-3.2.6 \
		fgl-5.8.3.0_2 \
		file-embed-0.0.16.0 \
		filelock-0.1.1.9 \
		fin-0.3.2_2 \
		fingertree-0.1.6.3 \
		fingertree-rm-1.0.0.4:chap \
		foldable1-classes-compat-0.1.3_2 \
		foldl-1.4.18_2 \
		formatting-7.2.0 \
		foundation-0.0.30:chap \
		free-5.2_8 \
		fs-api-0.4.0.0:chap \
		fs-sim-0.4.1.0:chap \
		fsnotify-0.4.4.0 \
		generic-arbitrary-1.0.1.2 \
		generic-lens-2.3.0.0 \
		generic-lens-core-2.3.0.0 \
		generic-optics-2.3.0.0 \
		generic-random-1.5.0.1 \
		generics-sop-0.5.1.4_3 \
		genvalidity-1.1.1.0 \
		githash-0.1.7.0 \
		graphviz-2999.20.2.1 \
		groups-0.5.3 \
		half-0.3.3_2 \
		happy-2.2 \
		happy-lib-2.2 \
		hashable-1.5.1.0 \
		haskell-lexer-1.2.1 \
		haskell-src-exts-1.23.1 \
		haskell-src-meta-0.8.15_1 \
		hdaemonize-0.5.7 \
		heapwords-0.1.0.2:chap \
		hedgehog-1.7:chap \
		hedgehog-quickcheck-0.1.1_11 \
		heredoc-0.2.0.0 \
		hinotify-0.4.2 \
		hostname-1.0 \
		hourglass-0.2.12_1 \
		hpke-0.0.0_1 \
		hsc2hs-0.68.10_5 \
		hspec-2.11.17 \
		hspec-core-2.11.17 \
		hspec-discover-2.11.17 \
		hspec-expectations-0.8.4_2 \
		hspec-expectations-lifted-0.10.0 \
		hsyslog-5.0.2_1 \
		http-api-data-0.7_1 \
		http-client-0.7.19 \
		http-client-tls-0.3.6.4_3 \
		http-date-0.0.11 \
		http-semantics-0.4.0 \
		http-types-0.12.4_1 \
		http2-5.4.0_1 \
		indexed-profunctors-0.1.1.1 \
		indexed-traversable-0.1.5 \
		indexed-traversable-instances-0.1.2.1 \
		infinite-list-0.1.3 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		invariant-0.6.5 \
		io-classes-1.8.0.1:chap \
		io-sim-1.8.0.1:chap \
		iohk-monitoring-0.2.1.2:chap \
		iproute-1.7.15 \
		js-chart-2.9.4.1 \
		kan-extensions-5.2.8 \
		katip-0.8.8.4 \
		kes-agent-1.2.0.0:chap \
		kes-agent-crypto-1.1.0.0:chap \
		lazy-search-0.1.3.0 \
		lazysmallcheck-0.6 \
		lens-5.3.6 \
		lens-aeson-1.2.3_3 \
		libyaml-0.1.4 \
		libyaml-clib-0.2.5 \
		lifted-async-0.10.2.7 \
		lifted-base-0.2.3.12 \
		list-t-1.0.5.7 \
		logict-0.8.2.0 \
		lsm-tree-1.0.0.2 \
		math-functions-0.3.4.4 \
		measures-0.1.0.3:chap \
		megaparsec-9.7.0_1 \
		memory-0.18.0_1 \
		memory-pool-0.1.0.0 \
		mempack-0.2.1.0 \
		microlens-0.4.14.0 \
		microlens-ghc-0.4.15.1 \
		microlens-mtl-0.2.1.0 \
		microlens-th-0.4.3.17_1 \
		microstache-1.0.3.1 \
		mime-types-0.1.2.2 \
		mmorph-1.2.2_2 \
		monad-control-1.0.3.1 \
		monad-logger-0.3.42 \
		monad-loops-0.4.3 \
		mono-traversable-1.0.21.0 \
		monoid-subclasses-1.2.6.1 \
		monoidal-containers-0.6.7.0 \
		monoidal-synchronisation-0.1.0.7:chap \
		mtl-compat-0.2.2 \
		multiset-0.3.4.3_1 \
		mutable-containers-0.3.4.1 \
		mwc-random-0.15.3.0 \
		network-3.2.8.0 \
		network-byte-order-0.1.8 \
		network-control-0.1.7 \
		network-mux-0.10.1.0:chap \
		network-uri-2.6.4.2_1 \
		newtype-0.2.2.1 \
		newtype-generics-0.6.2_5 \
		non-integral-1.0.0.0_2:chap \
		nonempty-containers-0.3.5.0 \
		nonempty-vector-0.2.4_1 \
		nothunks-0.3.1_2 \
		old-locale-1.0.0.7_2 \
		old-time-1.1.1.0 \
		optics-core-0.4.2 \
		optparse-applicative-0.19.0.0:chap \
		ordered-containers-0.2.4 \
		ouroboros-consensus-3.0.1.0:chap \
		ouroboros-network-1.1.0.0_5:chap \
		parallel-3.3.0.0_1 \
		parsec-3.1.18.0_1 \
		parser-combinators-1.3.1 \
		parsers-0.12.12_1 \
		partial-order-0.2.0.0 \
		pcre-heavy-1.0.0.4 \
		pcre-light-0.4.1.3_1 \
		pipes-4.3.16_6 \
		plutus-core-1.63.0.0:chap \
		plutus-ledger-api-1.63.0.0:chap \
		plutus-tx-1.63.0.0:chap \
		polyparse-1.13.1 \
		pretty-show-1.10 \
		pretty-simple-4.1.4.0 \
		prettyprinter-1.7.2 \
		prettyprinter-ansi-terminal-1.1.4 \
		prettyprinter-compat-ansi-wl-pprint-1.0.2 \
		prettyprinter-configurable-1.36.0.0:chap \
		primes-0.2.1.0 \
		primitive-0.9.1.0_1 \
		profunctors-5.6.3 \
		prometheus-2.3.0 \
		protolude-0.3.5 \
		psqueues-0.2.8.3_1 \
		pvar-1.0.0.0_1 \
		quickcheck-instances-0.3.33_1 \
		quickcheck-io-0.2.0 \
		quickcheck-monoids-0.1.1.0:chap \
		quickcheck-state-machine-0.10.3 \
		quickcheck-transformer-0.3.1.2_1 \
		quiet-0.2 \
		ral-0.2.2_3 \
		random-1.3.1 \
		random-shuffle-0.0.4 \
		rawlock-0.1.2.0_1 \
		recursion-schemes-5.2.3_2 \
		recv-0.1.1 \
		reflection-2.1.9_1 \
		regex-base-0.94.0.3 \
		regex-tdfa-1.3.2.5 \
		relude-1.2.2.2_3 \
		resource-registry-0.2.1.0 \
		resourcet-1.3.0 \
		retry-0.9.3.1 \
		safe-0.3.21_1 \
		safe-exceptions-0.1.7.4_1 \
		safe-wild-cards-1.0.0.2_2 \
		scientific-0.3.8.1 \
		selective-0.7.0.1 \
		semialign-1.3.1.1 \
		semigroupoids-6.0.2_1 \
		semigroups-0.20.1 \
		serdoc-core-0.3.2.0 \
		serialise-0.2.6.1_5 \
		simple-sendfile-0.2.32 \
		singletons-3.0.4_1 \
		size-based-0.1.3.3_2 \
		small-steps-1.1.3.0:chap \
		socket-0.8.3.0_2 \
		some-1.0.6_3 \
		sop-core-0.5.0.2_6 \
		sop-extras-0.4.1.0_1:chap \
		split-0.2.5 \
		splitmix-0.1.3.2 \
		statistics-0.16.5.0_1 \
		statistics-linreg-0.3 \
		stm-chans-3.0.0.11 \
		streaming-0.2.4.0:chap \
		streaming-binary-0.3.0.1 \
		streaming-bytestring-0.3.4 \
		streaming-commons-0.2.3.1 \
		strict-0.5.1_1 \
		strict-checked-vars-0.2.1.0:chap \
		strict-list-1.0.0.1 \
		strict-sop-core-0.1.3.0_1:chap \
		string-conv-0.2.0 \
		string-conversions-0.4.0.1_1 \
		string-interpolate-0.3.4.0_6 \
		syb-0.7.4 \
		tagged-0.8.10_1 \
		tasty-1.5.4 \
		tasty-expected-failure-0.12.3 \
		tasty-golden-2.3.6 \
		tasty-hedgehog-1.4.0.2_8 \
		tasty-hunit-0.10.2 \
		tasty-quickcheck-0.11.1_5 \
		tasty-rerun-1.1.20_2 \
		temporary-1.3 \
		terminal-progress-bar-0.4.2 \
		terminal-size-0.3.4_1 \
		testing-type-modifiers-0.1.0.1 \
		text-2.1.4 \
		text-builder-1.0.0.5 \
		text-builder-core-0.1.1.3 \
		text-conversions-0.3.1.1 \
		text-iso8601-0.1.1.1 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		th-env-0.1.1 \
		th-expand-syns-0.4.12.0_1 \
		th-lift-0.8.7 \
		th-lift-instances-0.1.20 \
		th-orphans-0.13.17 \
		th-reify-many-0.1.10 \
		th-utilities-0.2.5.2 \
		these-1.2.1_3 \
		time-compat-1.9.9_1 \
		time-hourglass-0.3.0 \
		time-manager-0.3.2 \
		time-units-1.0.0 \
		tls-2.2.2_1 \
		tomland-1.3.3.3_6 \
		trace-dispatcher-2.12.1:chap \
		tracer-transformers-0.1.0.4:chap \
		transformers-base-0.4.6.1 \
		transformers-compat-0.7.2 \
		transformers-except-0.1.4_1 \
		tree-diff-0.3.4_2 \
		typed-process-0.2.13.0 \
		typed-protocols-1.2.1.0:chap \
		unagi-chan-0.4.1.4 \
		unbounded-delays-0.1.1.1 \
		universe-base-1.1.4_2 \
		unix-bytestring-0.4.0.4 \
		unix-compat-0.7.4.1 \
		unix-time-0.4.17 \
		unliftio-0.2.25.1 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		utf8-string-1.0.2 \
		uuid-types-1.0.6.1 \
		validation-1.1.5 \
		validation-selective-0.2.0.0.0.0.0.0.1_1:chap \
		validity-0.12.1.0 \
		vault-0.3.1.6 \
		vector-0.13.2.0_5 \
		vector-algorithms-0.9.1.0:chap \
		vector-binary-instances-0.2.5.2_5 \
		vector-map-1.2.0.0:chap \
		vector-stream-0.1.0.1_4 \
		vector-th-unbox-0.2.2_9 \
		void-0.7.4 \
		wai-3.2.4 \
		wai-app-static-3.2.1 \
		wai-extra-3.1.18 \
		wai-logger-2.5.0 \
		wai-websockets-3.0.1.2 \
		warp-3.4.13_1 \
		websockets-0.13.0.0_6 \
		wherefrom-compat-0.2.0.0_5 \
		wide-word-0.1.9.0_1 \
		with-utf8-1.1.0.0_2 \
		witherable-0.5_2 \
		wl-pprint-annotated-0.1.0.1_4 \
		wl-pprint-text-1.2.0.2_4 \
		word8-0.1.3 \
		yaml-0.11.11.2_2 \
		zlib-0.7.1.1
