USE_CABAL=	Cabal-3.16.1.0 \
		Cabal-syntax-3.16.1.0_1 \
		HTTP-4000.5.0_1 \
		OneTuple-0.4.3 \
		QuickCheck-2.18.0.0 \
		StateVar-1.2.2 \
		aeson-2.2.4.1 \
		alex-3.5.4.2 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		atomic-counter-0.1.2.4 \
		base-orphans-0.9.4 \
		base16-bytestring-1.0.2.0_1 \
		base64-bytestring-1.2.1.0_1 \
		bifunctors-5.6.3_1 \
		boring-0.2.2_1 \
		cabal-install-3.16.1.0_1 \
		cabal-install-solver-3.16.1.0_1 \
		cabal-plan-0.7.6.1 \
		character-ps-0.1 \
		colour-2.3.7 \
		comonad-5.0.10 \
		contravariant-1.5.6 \
		cryptohash-sha256-0.11.102.1_6 \
		data-fix-0.3.4_2 \
		dec-0.0.6_1 \
		directory-ospath-streaming-0.3_1 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		echo-0.1.4 \
		ed25519-0.0.5.0_9 \
		edit-distance-0.2.2.1_1 \
		file-io-0.1.6 \
		hackage-security-0.6.3.2_2 \
		hashable-1.5.1.0 \
		hsc2hs-0.68.10_5 \
		indexed-profunctors-0.1.1.1 \
		indexed-traversable-0.1.5 \
		indexed-traversable-instances-0.1.2.1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		network-3.2.8.0 \
		network-uri-2.6.4.2_1 \
		open-browser-0.4.0.0 \
		optics-core-0.4.2 \
		optparse-applicative-0.19.0.0 \
		prettyprinter-1.7.2 \
		prettyprinter-ansi-terminal-1.1.4 \
		primitive-0.9.1.0_1 \
		random-1.3.1 \
		regex-base-0.94.0.3 \
		regex-posix-0.96.0.2 \
		resolv-0.2.0.3 \
		safe-exceptions-0.1.7.4_1 \
		scientific-0.3.8.1 \
		semialign-1.3.1.1 \
		semigroupoids-6.0.2_1 \
		singleton-bool-0.1.8_1 \
		some-1.0.6_3 \
		splitmix-0.1.3.2 \
		strict-0.5.1_1 \
		tagged-0.8.10_1 \
		tar-0.7.1.0 \
		tasty-1.5.4 \
		text-iso8601-0.1.1.1 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		these-1.2.1_3 \
		time-compat-1.9.9_1 \
		topograph-1.0.1_1 \
		transformers-compat-0.8 \
		unordered-containers-0.2.21_2 \
		uuid-types-1.0.6.1 \
		vector-0.13.2.0_2 \
		vector-stream-0.1.0.1_4 \
		witherable-0.5_2 \
		zlib-0.7.1.1
