USE_CABAL=	Glob-0.10.2_3 \
		JuicyPixels-3.3.9_1 \
		OneTuple-0.4.2.1 \
		Only-0.1_2 \
		QuickCheck-2.16.0.0 \
		StateVar-1.2.2 \
		aeson-2.2.3.0_4 \
		aeson-pretty-0.8.10 \
		alex-3.5.4.0 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		appar-0.1.8 \
		asciidoc-0.1.0.2 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		attoparsec-0.14.4_6 \
		attoparsec-aeson-2.2.2.0 \
		base-compat-0.15.0 \
		base-orphans-0.9.4 \
		base16-1.0_4 \
		base16-bytestring-1.0.2.0_1 \
		base64-1.0_2 \
		base64-bytestring-1.2.1.0_1 \
		bifunctors-5.6.3_1 \
		bitvec-1.1.6.0 \
		blaze-builder-0.4.4.1 \
		blaze-html-0.9.2.0_1 \
		blaze-markup-0.8.3.0_2 \
		byteorder-1.0.4 \
		cabal-doctest-1.0.12_1 \
		case-insensitive-1.2.1.0 \
		cassava-0.5.4.1 \
		cborg-0.2.10.0_3 \
		cereal-0.5.8.3 \
		character-ps-0.1 \
		citeproc-0.13 \
		cmdargs-0.10.22 \
		colour-2.3.7 \
		commonmark-0.2.6.1 \
		commonmark-extensions-0.2.6 \
		commonmark-pandoc-0.2.3 \
		comonad-5.0.10 \
		conduit-1.3.6.1 \
		conduit-extra-1.3.8_1 \
		contravariant-1.5.6 \
		cookie-0.5.1 \
		cryptohash-md5-0.11.101.0_6 \
		crypton-1.1.1 \
		crypton-asn1-encoding-0.10.0 \
		crypton-asn1-parse-0.10.0 \
		crypton-asn1-types-0.4.1 \
		crypton-connection-0.4.6 \
		crypton-pem-0.3.0 \
		crypton-socks-0.6.2 \
		crypton-x509-1.9.0 \
		crypton-x509-store-1.9.0 \
		crypton-x509-system-1.9.0 \
		crypton-x509-validation-1.9.0 \
		data-default-0.8.0.2 \
		data-default-class-0.2.0.0 \
		data-fix-0.3.4_2 \
		digest-0.0.2.1 \
		distributive-0.6.3 \
		djot-0.1.4 \
		dlist-1.0_2 \
		doclayout-0.5.0.1 \
		doctemplates-0.11.0.1 \
		ech-config-0.0.1_1 \
		emojis-0.1.4.1 \
		file-embed-0.0.16.0 \
		generically-0.1.1_5 \
		gridtables-0.1.1.0 \
		haddock-library-1.11.0_5 \
		half-0.3.3_2 \
		happy-2.2 \
		happy-lib-2.2 \
		hashable-1.5.1.0 \
		haskell-lexer-1.2.1 \
		hpke-0.1.0 \
		hsc2hs-0.68.10_5 \
		hslua-2.5.0 \
		hslua-aeson-2.3.2 \
		hslua-classes-2.3.2 \
		hslua-cli-1.4.4 \
		hslua-core-2.3.2.1 \
		hslua-list-1.1.4 \
		hslua-marshalling-2.3.2 \
		hslua-module-doclayout-1.2.1.1 \
		hslua-module-path-1.2.0 \
		hslua-module-system-1.3.0 \
		hslua-module-text-1.2.0 \
		hslua-module-version-1.2.0.1 \
		hslua-module-zip-1.2.1 \
		hslua-objectorientation-2.5.0 \
		hslua-packaging-2.4.1 \
		hslua-repl-0.1.2 \
		hslua-typing-0.2.0 \
		http-client-0.7.19 \
		http-client-tls-0.4.0 \
		http-types-0.12.4 \
		indexed-traversable-0.1.4_1 \
		indexed-traversable-instances-0.1.2_1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		iproute-1.7.15 \
		ipynb-0.2_1 \
		isocline-1.0.9 \
		jira-wiki-markup-1.5.1_1 \
		libyaml-0.1.4 \
		libyaml-clib-0.2.5 \
		lpeg-1.1.0.1 \
		lua-2.3.4 \
		mime-types-0.1.2.2 \
		mono-traversable-1.0.21.0 \
		network-3.2.8.0 \
		network-byte-order-0.1.8 \
		network-uri-2.6.4.2_1 \
		old-locale-1.0.0.7_2 \
		old-time-1.1.1.0 \
		optparse-applicative-0.19.0.0 \
		ordered-containers-0.2.4 \
		pandoc-3.9.0.2 \
		pandoc-lua-engine-0.5.2 \
		pandoc-lua-marshal-0.3.2.1 \
		pandoc-types-1.23.1.1 \
		pretty-show-1.10 \
		prettyprinter-1.7.1 \
		prettyprinter-ansi-terminal-1.1.3 \
		primitive-0.9.1.0_1 \
		ram-0.21.1 \
		random-1.3.1 \
		regex-base-0.94.0.3 \
		regex-tdfa-1.3.2.5 \
		resourcet-1.3.0 \
		safe-0.3.21_1 \
		scientific-0.3.8.1 \
		semialign-1.3.1_2 \
		semigroupoids-6.0.2_1 \
		serialise-0.2.6.1_5 \
		skylighting-0.14.7 \
		skylighting-core-0.14.7 \
		skylighting-format-ansi-0.1 \
		skylighting-format-blaze-html-0.1.2 \
		skylighting-format-context-0.1.0.2 \
		skylighting-format-latex-0.1 \
		skylighting-format-typst-0.1 \
		split-0.2.5 \
		splitmix-0.1.3.2 \
		streaming-commons-0.2.3.1 \
		strict-0.5.1_1 \
		syb-0.7.4 \
		tagged-0.8.10_1 \
		tagsoup-0.14.8 \
		tasty-1.5.3_2 \
		temporary-1.3 \
		texmath-0.13.1.1 \
		text-conversions-0.3.1.1 \
		text-iso8601-0.1.1_2 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		th-lift-0.8.7 \
		th-lift-instances-0.1.20 \
		these-1.2.1_2 \
		time-compat-1.9.9 \
		time-hourglass-0.3.0 \
		tls-2.3.0 \
		toml-parser-2.0.2.0_1 \
		transformers-compat-0.8 \
		typed-process-0.2.13.0 \
		typst-0.9.0.1 \
		typst-symbols-0.1.9.1 \
		unicode-collation-0.1.3.6_2 \
		unicode-data-0.8.0 \
		unicode-transforms-0.4.0.1_9 \
		uniplate-1.6.13_1 \
		unix-time-0.4.17 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		utf8-string-1.0.2 \
		uuid-types-1.0.6_3 \
		vector-0.13.2.0_2 \
		vector-algorithms-0.9.1.0_1 \
		vector-stream-0.1.0.1_4 \
		witherable-0.5_2 \
		xml-1.3.14_2 \
		xml-conduit-1.10.1.0 \
		xml-types-0.3.8 \
		yaml-0.11.11.2_2 \
		zip-archive-0.4.3.2_1 \
		zlib-0.7.1.1
